# CanadianExperience

./: Lab_frozen_lake.ipynb  README.md  movie.anim
CanadianExperienceLib/: CMakeLists.txt  HaroldFactory.cpp  MachineAdapter.cpp  MachineAdapter.h  MachineStartDlg.cpp  MachineStartDlg.h  Picture.cpp  Picture.h  PictureFactory.cpp  SpartyFactory.cpp  Timeline.cpp  Timeline.h  TimelineDlg.cpp  TimelineDlg.h  ViewEdit.cpp  ViewTimeline.cpp  ViewTimeline.h
MachineLib/: Box.cpp  Box.h  CMakeLists.txt  Cam.cpp  Cam.h  Component.cpp  IKeyDrop.h  IKeyFall.h  Machine.h  Machine1Factory.cpp  Machine1Factory.h  Machine2Factory.h  MachineCFactory.cpp  MachineCFactory.h  MachineSystem.cpp  Pulley.cpp  Pulley.h  RotationSink.h  RotationSource.h  Shaft.cpp  Shaft.h  Sparty.cpp  Sparty.h
resources/xrc/: main.fbp  main.xrc
